# soroban-guard-contracts

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  TODO.md  audit.toml
.github/workflows/: ci.yml
docs/: threat_model.md  vulnerabilities.md
registry/: Cargo.toml
registry/src/: lib.rs
registry/test_snapshots/tests/: test_add_scanner_and_submit.1.json  test_get_history_accumulates.1.json  test_get_scans_by_min_severity_filters.1.json  test_get_scans_by_min_severity_high_threshold_returns_empty.1.json  test_get_scans_by_min_severity_pagination.1.json  test_get_scans_by_min_severity_zero_returns_all.1.json  test_remove_scanner_blocks_submission.1.json  test_unverified_scanner_cannot_submit.1.json
secure/dust_griefing/: Cargo.toml
secure/paginated_airdrop/: Cargo.toml
secure/protected_admin/: Cargo.toml
secure/protected_admin/src/: lib.rs
secure/protected_fee_withdraw/: Cargo.toml
secure/protected_oracle/: Cargo.toml
secure/secure_airdrop/: Cargo.toml
secure/secure_burn/: Cargo.toml
secure/secure_burn/src/: lib.rs
secure/secure_dao/: Cargo.toml
secure/secure_escrow/: Cargo.toml
secure/secure_lending/: Cargo.toml
secure/secure_lending/src/: lib.rs
secure/secure_multisig/: Cargo.toml
secure/secure_multisig/src/: lib.rs
secure/secure_pausable/: Cargo.toml
secure/secure_pausable/src/: lib.rs
secure/secure_staking/: Cargo.toml
secure/secure_token/: Cargo.toml
secure/secure_transfer/: Cargo.toml
secure/secure_transfer/src/: lib.rs
secure/secure_vault/: Cargo.toml
secure/secure_vault/src/: lib.rs
secure/secure_vesting/: Cargo.toml
secure/secure_vesting/src/: lib.rs
secure/sequence_lock/: Cargo.toml
secure/sequence_lock/src/: lib.rs
vulnerable/: README_TEMPLATE.md
vulnerable/abs_min_overflow/: Cargo.toml
vulnerable/abs_min_overflow/src/: lib.rs  secure.rs
vulnerable/abstain_counts_as_yes/: Cargo.toml
vulnerable/admin_rugpull/: Cargo.toml  README.md
vulnerable/admin_rugpull/src/: lib.rs  secure.rs
vulnerable/allowance_before_balance/: Cargo.toml
vulnerable/allowance_not_decremented/: Cargo.toml  README.md
vulnerable/allowance_not_decremented/src/: lib.rs  secure.rs
vulnerable/asset_key_collision/: Cargo.toml  README.md
vulnerable/assumed_token_decimals/: Cargo.toml
vulnerable/assumed_token_decimals/src/: lib.rs  secure.rs
vulnerable/auction_close_early/: Cargo.toml
vulnerable/auction_close_early/src/: lib.rs  secure.rs
vulnerable/auction_min_increment_missing/: Cargo.toml
vulnerable/auction_refund_block/: Cargo.toml
vulnerable/audit_expiry_ignored/: Cargo.toml
vulnerable/audit_expiry_ignored/src/: lib.rs  secure.rs
vulnerable/balance_key_missing_user/: Cargo.toml
vulnerable/balance_key_missing_user/src/: lib.rs  secure.rs
vulnerable/borrow_without_accrual/: Cargo.toml
vulnerable/borrow_without_accrual/src/: lib.rs  secure.rs
vulnerable/bridge_partial_mint_replay/: Cargo.toml
vulnerable/bridge_partial_mint_replay/src/: lib.rs  secure.rs
vulnerable/buy_without_listing/: Cargo.toml
vulnerable/buy_without_listing/src/: lib.rs  secure.rs
vulnerable/call_depth/: Cargo.toml  README.md
vulnerable/call_depth/src/: lib.rs
vulnerable/callback_before_invariant/: Cargo.toml
vulnerable/callback_before_invariant/src/: lib.rs  secure.rs
vulnerable/cross_call_error_swallowed/: Cargo.toml
vulnerable/cross_call_error_swallowed/src/: lib.rs  secure.rs
vulnerable/current_contract_admin/: Cargo.toml
vulnerable/current_contract_admin/src/: lib.rs  secure.rs
vulnerable/deposit_cap_wrong_amount/: Cargo.toml
vulnerable/deposit_cap_wrong_amount/src/: lib.rs  secure.rs
vulnerable/div_by_zero/: Cargo.toml  README.md
vulnerable/div_by_zero/src/: lib.rs
vulnerable/double_claim/: Cargo.toml  README.md
vulnerable/double_claim/src/: lib.rs
vulnerable/dust_griefing/: Cargo.toml  README.md
vulnerable/empty_vault_share_inflation/: Cargo.toml
vulnerable/escrow_balance_check/: Cargo.toml
vulnerable/even_median_bias/: Cargo.toml  README.md
vulnerable/event_authority_spoof/: Cargo.toml
vulnerable/expired_delegation/: Cargo.toml
vulnerable/fee_on_transfer/: Cargo.toml
vulnerable/fee_precision_loss/: Cargo.toml
vulnerable/flash_fee_not_collected/: Cargo.toml
vulnerable/flash_loan_no_check/: Cargo.toml  README.md
vulnerable/flash_receiver_unchecked/: Cargo.toml
vulnerable/free_share_rounding/: Cargo.toml
vulnerable/governance_target_unvalidated/: Cargo.toml
vulnerable/hardcoded_beneficiary/: Cargo.toml
vulnerable/ignored_return/: Cargo.toml  PR_DESCRIPTION.md
vulnerable/incomplete_blacklist/: Cargo.toml
vulnerable/instance_admin_storage/: Cargo.toml
vulnerable/instant_oracle/: Cargo.toml  README.md
vulnerable/interest_index_reset/: Cargo.toml
vulnerable/inverted_health_factor/: Cargo.toml
vulnerable/invoker_trusted_as_user/: Cargo.toml
vulnerable/key_collision/: Cargo.toml  README.md
vulnerable/leaky_events/: Cargo.toml  README.md
vulnerable/listing_price_signature_gap/: Cargo.toml
vulnerable/migration_version_skipped/: Cargo.toml
vulnerable/missing_auth/: Cargo.toml  README.md
vulnerable/missing_escrow_auth/: Cargo.toml
vulnerable/missing_events/: Cargo.toml  README.md
vulnerable/missing_ttl/: Cargo.toml  README.md
vulnerable/mixed_collateral_decimals/: Cargo.toml
vulnerable/near_overflow_input/: Cargo.toml
vulnerable/negative_fee_bps/: Cargo.toml
vulnerable/negative_transfer/: Cargo.toml  README.md
vulnerable/no_min_stake/: Cargo.toml
vulnerable/no_slippage/: Cargo.toml  README.md
vulnerable/oracle_asset_mismatch/: Cargo.toml  README.md
vulnerable/oracle_price_scale_mismatch/: Cargo.toml
vulnerable/partial_config_clear/: Cargo.toml
vulnerable/permit_domain_missing/: Cargo.toml
vulnerable/proposal_id_collision/: Cargo.toml
vulnerable/public_archive_restore/: Cargo.toml
vulnerable/public_proposal_cancel/: Cargo.toml
vulnerable/public_role_grant/: Cargo.toml  README.md
vulnerable/redundant_admin_set/: Cargo.toml
vulnerable/reentrancy/: Cargo.toml  README.md
(+303 files in other folders)
