[workspace]
resolver = "2"
members = [
    "vulnerable/admin_rugpull",
    "vulnerable/scanner_impersonation",
    "vulnerable/missing_auth",
    "vulnerable/zero_admin",
    "vulnerable/missing_events",
    "vulnerable/missing_ttl",
    "vulnerable/timestamp_lock",
    "vulnerable/unchecked_math",
    "vulnerable/instant_oracle",
    "vulnerable/unprotected_admin",
    "vulnerable/unprotected_emergency_withdraw",
    "vulnerable/unsafe_storage",
    "vulnerable/zero_deposit",
    "vulnerable/reentrancy",
    "vulnerable/dust_griefing",
    "vulnerable/negative_transfer",
    "vulnerable/string_admin",
    "vulnerable/div_by_zero",
    "vulnerable/flash_loan_no_check",
    "vulnerable/allowance_not_decremented",
    "vulnerable/permit_domain_missing",
    "vulnerable/leaky_events",
    "vulnerable/no_slippage",
    "secure/secure_vault",
    "secure/protected_admin",
    "secure/secure_transfer",
    "secure/secure_burn",
    "registry",
]

[workspace.dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
