[workspace]
resolver = "2"
members = [
    "vulnerable/admin_rugpull",
    "vulnerable/allowance_not_decremented",
    "vulnerable/call_depth",
    "vulnerable/div_by_zero",
    "vulnerable/double_claim",
    "vulnerable/dust_griefing",
    "vulnerable/flash_loan_no_check",
    "vulnerable/instant_oracle",
    "vulnerable/key_collision",
    "vulnerable/leaky_events",
    "vulnerable/incomplete_blacklist",
    "vulnerable/redundant_admin_set",
    "vulnerable/missing_auth",
    "vulnerable/unprotected_mint",
    "vulnerable/zero_admin",
    "vulnerable/zero_reward_rate",
    "vulnerable/missing_escrow_auth",
    "vulnerable/missing_events",
    "vulnerable/missing_ttl",
    "vulnerable/negative_transfer",
    "vulnerable/near_overflow_input",
    "vulnerable/no_slippage",
    "vulnerable/no_min_stake",
    "vulnerable/reentrancy",
    "vulnerable/reinit_attack",
    "vulnerable/scanner_impersonation",
    "vulnerable/self_stake",
    "vulnerable/self_deposit",
    "vulnerable/self_transfer",
    "vulnerable/sensitive_storage",
    "vulnerable/string_admin",
    "vulnerable/timelock_sequence",
    "vulnerable/timestamp_lock",
    "vulnerable/unchecked_kyc_level",
    "vulnerable/unchecked_math",
    "vulnerable/uncapped_rate",
    "vulnerable/fee_on_transfer",
    "vulnerable/instant_oracle",
    "vulnerable/stale_oracle",
    "vulnerable/unprotected_admin",
    "vulnerable/unprotected_upgrade",
    "vulnerable/unprotected_burn",
    "vulnerable/unprotected_delete",
    "vulnerable/unprotected_emergency_withdraw",
    "vulnerable/unprotected_fee_withdraw",
    "vulnerable/unsafe_storage",
    "vulnerable/unbounded_storage",
    "vulnerable/zero_deposit",
    "vulnerable/zero_wasm_hash",
    "vulnerable/reentrancy",
    "vulnerable/replay_attack",
    "vulnerable/dust_griefing",
    "vulnerable/negative_transfer",
    "vulnerable/string_admin",
    "vulnerable/div_by_zero",
    "vulnerable/flash_loan_no_check",
    "vulnerable/allowance_not_decremented",
    "vulnerable/leaky_events",
    "vulnerable/no_slippage",
    "vulnerable/unsafe_cast",
    "vulnerable/unprotected_pause",
    "secure/secure_vault",
    "secure/secure_escrow",
    "secure/protected_admin",
    "secure/secure_airdrop",
    "secure/secure_lending",
    "secure/secure_vesting",
    "secure/protected_fee_withdraw",
    "secure/secure_burn",
    "secure/secure_token",
    "secure/secure_pausable",
    "registry",
    "vulnerable/expired_delegation",
    "vulnerable/uncapped_supply",
    "vulnerable/silent_admin_change",
    "vulnerable/public_archive_restore",
    "vulnerable/ttl_bump_index_only",
    "vulnerable/storage_namespace_omitted",
    "vulnerable/slash_without_evidence",
]

[workspace.dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
