[package]
name = "secure-dust-griefing"
version = "0.1.0"
edition = "2021"
description = "Secure Soroban contract demonstrating dust-griefing mitigation"
license = "MIT"
repository = "https://github.com/Veritas-Vaults-Network/soroban-guard-contracts"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
