[package]
name = "protected-admin"
version = "0.1.0"
edition = "2021"
description = "Secure Soroban contract with admin auth on set_admin, upgrade, and profile writes"
license = "MIT"
repository = "https://github.com/Veritas-Vaults-Network/soroban-guard-contracts"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
