[package]
name = "secure_burn"
version = "0.1.0"
edition = "2021"
description = "Secure Soroban contract with authenticated token burn"
license = "MIT"
repository = "https://github.com/Veritas-Vaults-Network/soroban-guard-contracts"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
