[package]
name = "secure-lending"
version = "0.1.0"
edition = "2021"
description = "Secure Soroban lending reference with collateral and liquidation checks"
license = "MIT"
repository = "https://github.com/Veritas-Vaults-Network/soroban-guard-contracts"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
