[package]
name = "secure-multisig"
version = "0.1.0"
edition = "2021"
description = "Secure Soroban multisig contract requiring threshold approvals"
license = "MIT"
repository = "https://github.com/Veritas-Vaults-Network/soroban-guard-contracts"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
