[package]
name = "secure-pausable"
version = "0.1.0"
edition = "2021"
description = "Secure Soroban contract with admin-controlled pause mechanism"
license = "MIT"
repository = "https://github.com/Veritas-Vaults-Network/soroban-guard-contracts"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
