[package]
name = "secure-transfer"
version = "0.1.0"
edition = "2021"
description = "Secure Soroban transfer contract with full auth and validation"
license = "MIT"
repository = "https://github.com/Veritas-Vaults-Network/soroban-guard-contracts"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
