[package]
name = "secure-vault"
version = "0.1.0"
edition = "2021"
description = "Secure Soroban vault with require_auth on transfer and checked arithmetic"
license = "MIT"
repository = "https://github.com/Veritas-Vaults-Network/soroban-guard-contracts"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
