[package]
name = "sequence-lock"
version = "0.1.0"
edition = "2021"
description = "Secure Soroban contract using sequence numbers to prevent replay attacks"
license = "MIT"
repository = "https://github.com/Veritas-Vaults-Network/soroban-guard-contracts"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }