[package]
name = "abs-min-overflow"
version = "0.1.0"
edition = "2021"
description = "Vulnerable Soroban contract: unchecked abs() on i128::MIN overflows — risk module computes wrong debt delta"
license = "MIT"
repository = "https://github.com/Veritas-Vaults-Network/soroban-guard-contracts"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
