[package]
name = "admin-rugpull"
version = "0.1.0"
edition = "2021"
description = "Vulnerable Soroban contract demonstrating admin rugpull via unprotected upgrade"
license = "MIT"
repository = "https://github.com/Veritas-Vaults-Network/soroban-guard-contracts"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
