[package]
name = "assumed-token-decimals"
version = "0.1.0"
edition = "2021"
description = "Vulnerable Soroban contract demonstrating incorrect decimal assumption for multi-asset accounting"
license = "MIT"
repository = "https://github.com/Veritas-Vaults-Network/soroban-guard-contracts"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
