[package]
name = "auction-close-early"
version = "0.1.0"
edition = "2021"
description = "Vulnerable Soroban contract demonstrating auction close before end ledger"
license = "MIT"
repository = "https://github.com/Veritas-Vaults-Network/soroban-guard-contracts"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
