[package]
name = "audit-expiry-ignored"
version = "0.1.0"
edition = "2021"
description = "Vulnerable Soroban contract: audit expiry is stored but not checked by consumers"
license = "MIT"
repository = "https://github.com/Veritas-Vaults-Network/soroban-guard-contracts"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
