[package]
name = "borrow-without-accrual"
version = "0.1.0"
edition = "2021"
description = "Vulnerable Soroban fixture: borrow limit checked before interest accrual"
license = "MIT"
repository = "https://github.com/Veritas-Vaults-Network/soroban-guard-contracts"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
