[package]
name = "bridge-partial-mint-replay"
version = "0.1.0"
edition = "2021"
description = "Vulnerable Soroban contract: bridge burn proof reusable after partial mint failure"
license = "MIT"
repository = "https://github.com/Veritas-Vaults-Network/soroban-guard-contracts"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
