[package]
name = "buy-without-listing"
version = "0.1.0"
edition = "2021"
description = "Vulnerable Soroban contract: NFT marketplace buy does not require an active listing"
license = "MIT"
repository = "https://github.com/Veritas-Vaults-Network/soroban-guard-contracts"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
