[package]
name = "call-depth"
version = "0.1.0"
edition = "2021"
description = "Vulnerable Soroban contract demonstrating unbounded call-depth exploitation"
license = "MIT"
repository = "https://github.com/Veritas-Vaults-Network/soroban-guard-contracts"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
