[package]
name = "callback-before-invariant"
version = "0.1.0"
edition = "2021"
description = "Vulnerable Soroban contract: external callback mutates state before invariant check"
license = "MIT"
repository = "https://github.com/Veritas-Vaults-Network/soroban-guard-contracts"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
