[package]
name = "cross-call-error-swallowed"
version = "0.1.0"
edition = "2021"
description = "Vulnerable Soroban contract: cross-contract error converted to success status"
license = "MIT"
repository = "https://github.com/Veritas-Vaults-Network/soroban-guard-contracts"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
