[package]
name = "current-contract-admin"
version = "0.1.0"
edition = "2021"
description = "Vulnerable Soroban fixture where missing admin defaults to current contract address"
license = "MIT"
repository = "https://github.com/Veritas-Vaults-Network/soroban-guard-contracts"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
