[package]
name = "double-claim"
version = "0.1.0"
edition = "2021"
description = "Vulnerable Soroban contract demonstrating double-claim of rewards"
license = "MIT"
repository = "https://github.com/Veritas-Vaults-Network/soroban-guard-contracts"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
